/*
 * Copyright (c) 2020 gematik GmbH
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *    http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.gematik.ti.openhealthcard.events.message;

/**
 * General Event type for all OpenHealthCard Events
 *
 * @author christian.lange
 * @version 1.0
 */
public abstract class AbstractOpenHealthCardEvent {
    private final String sourceClass;
    private final String message;

    public AbstractOpenHealthCardEvent(final Object source, final String message) {
        this(source.getClass().getCanonicalName(), message);
    }

    public AbstractOpenHealthCardEvent(final String sourceClass, final String message) {
        this.sourceClass = sourceClass != null ? sourceClass : "";
        this.message = message;
    }

    public String getMessage() {
        return message;
    }

    public String getSourceClass() {
        return sourceClass;
    }

    @Override
    public String toString() {
        return "AbstractOpenHealthCardEvent{" + "sourceClass=" + sourceClass + ", message='" + message + '\'' + '}';
    }
}
